k8s/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress
---
apiVersion: v1
kind: Namespace
metadata:
  name: orthweb
