k8s/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: web-dpl
  namespace: orthweb
  labels:
    app: web
spec:
  replicas: 6 
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web 
    spec:
      volumes:
      - name: cmvol
        configMap:
          name: orthanc-app
          defaultMode: 0755
      - name: secvol
        secret:
          secretName: tls-orthweb
          defaultMode: 0755
      containers:
      - name: orthanc
        image: jodogne/orthanc-plugins
        args: ["/run/secrets/"]
        ports:
          - containerPort: 8042
        volumeMounts:
        - name: cmvol 
          mountPath: "/run/secrets/orthanc.json"
          subPath: "orthanc.json"
          readOnly: true
        - name: secvol
          mountPath: "/run/secrets/tls.crt"
          subPath: "tls.crt"
          readOnly: true
        - name: secvol
          mountPath: "/run/secrets/tls.key"
          subPath: "tls.key"
          readOnly: true
        lifecycle:
          postStart:
            exec:
              command: ['/bin/sh','-c',' cat /run/secrets/tls.key /run/secrets/tls.crt > /run/secrets/tls.pem']
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /app/explorer.html
            port: 8042
            scheme: HTTPS
            httpHeaders:
              - name: Authorization
                value: Basic b3J0aGFuYzpvcnRoYW5j
          initialDelaySeconds: 10
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 2
